--- a/app/users.html
+++ b/app/users.html
@@ -7,9 +7,9 @@
 </div>
 
 <div class="col">
-	<div class="col width-3of4">
+	<div class="col width-2of3">
 		<div class="panel cell">
-			<div class="header">Repo list</div>
+			<div class="header">사용자 목록</div>
 			<div class="body">
 				<div class="cell">
 					<div class="col">
@@ -23,63 +23,6 @@
 							</span>
 							<div class="col width-fill mobile-width-fill">
 								<a class="fatty" href="#">Repo 1</a>
-							</div>
-							<div class="col">This is one of my coolest repos.</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="body">
-				<div class="cell">
-					<div class="col">
-						<div class="col width-fit mobile-width-fit"><span class="icon icon-bookmark color-blue"></span></div>
-						<div class="col width-fill mobile-width-fill">
-							<span class="float-right">
-								<span class="text">
-									123
-								</span>
-								<span class="icon icon-star color-yellow"></span>
-							</span>
-							<div class="col width-fill mobile-width-fill">
-								<a class="fatty" href="#">Repo 2</a>
-							</div>
-							<div class="col">This is one of my coolest repos.</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="body">
-				<div class="cell">
-					<div class="col">
-						<div class="col width-fit mobile-width-fit"><span class="icon icon-bookmark color-blue"></span></div>
-						<div class="col width-fill mobile-width-fill">
-							<span class="float-right">
-								<span class="text">
-									123
-								</span>
-								<span class="icon icon-star color-yellow"></span>
-							</span>
-							<div class="col width-fill mobile-width-fill">
-								<a class="fatty" href="#">Repo 3</a>
-							</div>
-							<div class="col">This is one of my coolest repos.</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="body">
-				<div class="cell">
-					<div class="col">
-						<div class="col width-fit mobile-width-fit"><span class="icon icon-bookmark color-blue"></span></div>
-						<div class="col width-fill mobile-width-fill">
-							<span class="float-right">
-								<span class="text">
-									123
-								</span>
-								<span class="icon icon-star color-yellow"></span>
-							</span>
-							<div class="col width-fill mobile-width-fill">
-								<a class="fatty" href="#">Repo 4</a>
 							</div>
 							<div class="col">This is one of my coolest repos.</div>
 						</div>
@@ -102,5 +45,11 @@
 				</div>
 			</div>
 		</div>
+	</div>
+</div>
+
+<div class="col">
+	<div class="cell">
+		<button id="btn_logout" type="button" class="button">로그아웃</button>
 	</div>
 </div>
