--- a/app/accounts.html
+++ b/app/accounts.html
@@ -8,23 +8,21 @@
 
 <div class="col">
 	<div class="col width-3of4">
-		<div class="panel cell">
+		<div id="listview" class="panel cell">
 			<div class="header">사용자 목록</div>
-			<div class="body">
+			<div class="template body">
 				<div class="cell">
 					<div class="col">
 						<div class="col width-fit mobile-width-fit"><span class="icon icon-bookmark color-blue"></span></div>
 						<div class="col width-fill mobile-width-fill">
 							<span class="float-right">
-								<span class="text">
-									123
-								</span>
-								<span class="icon icon-star color-yellow"></span>
+								<span class="text star"></span>
+								<span class="icon icon-clock"></span>
 							</span>
 							<div class="col width-fill mobile-width-fill">
-								<a class="fatty" href="#">Repo 1</a>
+								<a class="fatty title" href="#">Repo 1</a>
 							</div>
-							<div class="col">This is one of my coolest repos.</div>
+							<div class="col description">This is one of my coolest repos.</div>
 						</div>
 					</div>
 				</div>
