--- a/app/accounts.html
+++ b/app/accounts.html
@@ -17,7 +17,7 @@
 						<div class="col width-fill mobile-width-fill">
 							<span class="float-right">
 								<span class="text star"></span>
-								<span class="icon icon-clock"></span>
+								<span class="icon icon-time"></span>
 							</span>
 							<div class="col width-fill mobile-width-fill">
 								<a class="fatty title" href="#">Repo 1</a>
