--- a/app/accounts.html
+++ b/app/accounts.html
@@ -27,6 +27,40 @@
 					</div>
 				</div>
 			</div>
+			<div class="body">
+				<div class="cell">
+					<div class="col">
+						<div class="col width-fit mobile-width-fit"><span class="icon icon-bookmark color-blue"></span></div>
+						<div class="col width-fill mobile-width-fill">
+							<span class="float-right">
+								<span class="text star">만료일자 2021-03-02</span>
+								<span class="icon icon-time"></span>
+							</span>
+							<div class="col width-fill mobile-width-fill">
+								<a class="fatty title" href="#">김사부 (admin@example.org)</a>
+							</div>
+							<div class="col description">서비스 유형: 리니지</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="body">
+				<div class="cell">
+					<div class="col">
+						<div class="col width-fit mobile-width-fit"><span class="icon icon-bookmark color-blue"></span></div>
+						<div class="col width-fill mobile-width-fill">
+							<span class="float-right">
+								<span class="text star">만료일자 2021-03-02</span>
+								<span class="icon icon-time"></span>
+							</span>
+							<div class="col width-fill mobile-width-fill">
+								<a class="fatty title" href="#">강동주 (kang@example.org)</a>
+							</div>
+							<div class="col description">서비스 유형: 리니지</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div class="col width-fill">
