--- a/app/accounts.html
+++ b/app/accounts.html
@@ -39,7 +39,7 @@
 							<div class="col width-fill mobile-width-fill">
 								<a class="fatty title" href="#">김사부 (admin@example.org)</a>
 							</div>
-							<div class="col description">서비스 유형: 리니지</div>
+							<div class="col description">금액: 5,000 / 수량: 5 / 서비스 유형: 리니지</div>
 						</div>
 					</div>
 				</div>
@@ -54,9 +54,9 @@
 								<span class="icon icon-time"></span>
 							</span>
 							<div class="col width-fill mobile-width-fill">
-								<a class="fatty title" href="#">강동주 (kang@example.org)</a>
+								<a class="fatty title" href="#">강부장 (kang@example.org)</a>
 							</div>
-							<div class="col description">서비스 유형: 리니지</div>
+							<div class="col description">금액: 5,000 / 수량: 5 / 서비스 유형: 리니지</div>
 						</div>
 					</div>
 				</div>
