--- a/app/login.html
+++ b/app/login.html
@@ -76,7 +76,9 @@
 
 <div class="col">
 	<div class="cell">
-		<p>허가된 사용자만 접근이 가능합니다. 비인가된 접속을 시도할 경우 법적 책임을 물을 수 있습니다.</p>
-		<p>Only authorized users can access it. If you attempt unauthorized access, you may be held liable for unauthorized access.</p>
+		<small>
+			허가된 사용자만 접근이 가능합니다. 비인가된 접속을 시도할 경우 법적 책임을 물을 수 있습니다.
+			Only authorized users can access it. If you attempt unauthorized access, you may be held liable for unauthorized access.
+		</small>
 	</div>
 </div>
