--- a/app/accounts.html
+++ b/app/accounts.html
@@ -71,8 +71,10 @@
 			<div class="body">
 				<div class="cell menu">
 					<ul class="left nav links">
-						<li><a href="#">사용자 관리자</a></li>
-						<li><a href="#">IP 관리자</a></li>
+						<li><a href="/app/servers.html">서버 목록</a></li>
+						<li><a href="/app/ips.html">IP 목록</a></li>
+						<li><a href="/index.html">사용자</a></li>
+						<li><a href="#">정산</a></li>
 					</ul>
 				</div>
 			</div>
